--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,32 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 13,
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
-  // HERE
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
-
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    "no-unused-vars": "warn",
+    "prefer-const": "error",
+    "no-unused-expressions": "error",
+    "no-undef": "error",
+    "no-console": "warn",
+    "@typescript-eslint/consistent-type-definitions": [
+      "error",
+      "type"
+    ]
   },
-
   "env": {
+    "node": true,
+    "commonjs": true,
     "browser": true,
-    "es2021": true
+    "es6": true
   }
 }
